--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query-devtools": "^5.91.1",
     "axios": "^1.13.2",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-router": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
